--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.1.3",
     "cloudinary-core": "^2.13.0",
     "dot-env": "^0.0.1",
+    "dotenv": "^16.0.3",
     "formik": "^2.2.9",
     "jquery": "^3.6.0",
     "mdb-react-ui-kit": "^2.4.0",
@@ -57,5 +58,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "dotenv-webpack": "^8.0.1"
   }
 }
